--- a/series.conf
+++ b/series.conf
@@ -1688,6 +1688,7 @@
 	patches.kernel.org/6.17.8-300-selftests-drv-net-wait-for-carrier.patch
 	patches.kernel.org/6.17.8-301-net-phy-mscc-report-and-configure-in-band-auto.patch
 	patches.kernel.org/6.17.8-302-scsi-ufs-host-mediatek-Fix-auto-hibern8-timer-.patch
+	patches.kernel.org/6.17.8-303-scsi-ufs-host-mediatek-Fix-PWM-mode-switch-iss.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
