--- a/series.conf
+++ b/series.conf
@@ -1559,6 +1559,7 @@
 	patches.kernel.org/6.17.8-171-ARM-tegra-transformer-20-fix-audio-codec-inter.patch
 	patches.kernel.org/6.17.8-172-firmware-qcom-tzmem-disable-sc7180-platform.patch
 	patches.kernel.org/6.17.8-173-soc-ti-k3-socinfo-Add-information-for-AM62L-SR.patch
+	patches.kernel.org/6.17.8-174-mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
