--- a/series.conf
+++ b/series.conf
@@ -1454,6 +1454,7 @@
 	patches.kernel.org/6.17.8-066-bpf-Conditionally-include-dynptr-copy-kfuncs.patch
 	patches.kernel.org/6.17.8-067-drm-msm-Ensure-vm-is-created-in-VM_BIND-ioctl.patch
 	patches.kernel.org/6.17.8-068-ALSA-usb-audio-add-mono-main-switch-to-Presonu.patch
+	patches.kernel.org/6.17.8-069-ALSA-usb-audio-don-t-log-messages-meant-for-18.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
