--- a/series.conf
+++ b/series.conf
@@ -1414,6 +1414,7 @@
 	patches.kernel.org/6.17.8-026-x86-build-Disable-SSE4a.patch
 	patches.kernel.org/6.17.8-027-x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 	patches.kernel.org/6.17.8-028-x86-fpu-Ensure-XFD-state-on-signal-delivery.patch
+	patches.kernel.org/6.17.8-029-wifi-ath10k-Fix-memory-leak-on-unsupported-WMI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
