--- a/series.conf
+++ b/series.conf
@@ -2071,6 +2071,7 @@
 	patches.kernel.org/6.17.8-683-RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.kernel.org/6.17.8-684-RDMA-irdma-Remove-unused-struct-irdma_cq-field.patch
 	patches.kernel.org/6.17.8-685-RDMA-irdma-Set-irdma_cq-cq_num-field-during-CQ.patch
+	patches.kernel.org/6.17.8-686-RDMA-uverbs-Fix-umem-release-in-UVERBS_METHOD_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
