--- a/series.conf
+++ b/series.conf
@@ -1912,6 +1912,7 @@
 	patches.kernel.org/6.17.8-524-udp_tunnel-use-netdev_warn-instead-of-netdev_W.patch
 	patches.kernel.org/6.17.8-525-HID-asus-add-Z13-folio-to-generic-group-for-mu.patch
 	patches.kernel.org/6.17.8-526-watchdog-s3c2410_wdt-Fix-max_timeout-being-cal.patch
+	patches.kernel.org/6.17.8-527-crypto-sun8i-ce-remove-channel-timeout-field.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
