--- a/series.conf
+++ b/series.conf
@@ -2056,6 +2056,7 @@
 	patches.kernel.org/6.17.8-668-exfat-limit-log-print-for-IO-error.patch
 	patches.kernel.org/6.17.8-669-exfat-validate-cluster-allocation-bits-of-the-.patch
 	patches.kernel.org/6.17.8-670-6pack-drop-redundant-locking-and-refcounting.patch
+	patches.kernel.org/6.17.8-671-page_pool-Clamp-pool-size-to-max-16K-pages.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
