--- a/series.conf
+++ b/series.conf
@@ -1713,6 +1713,7 @@
 	patches.kernel.org/6.17.8-325-drm-xe-Make-page-size-consistent-in-loop.patch
 	patches.kernel.org/6.17.8-326-wifi-rtw89-wow-remove-notify-during-WoWLAN-net.patch
 	patches.kernel.org/6.17.8-327-wifi-rtw89-fix-BSSID-comparison-for-non-transm.patch
+	patches.kernel.org/6.17.8-328-wifi-rtw89-8851b-rfk-update-IQK-TIA-setting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
