--- a/series.conf
+++ b/series.conf
@@ -2108,6 +2108,7 @@
 	patches.kernel.org/6.17.8-720-tools-lib-thermal-don-t-preserve-owner-in-inst.patch
 	patches.kernel.org/6.17.8-721-tools-lib-thermal-use-pkg-config-to-locate-lib.patch
 	patches.kernel.org/6.17.8-722-fbdev-Add-bounds-checking-in-bit_putcs-to-fix-.patch
+	patches.kernel.org/6.17.8-723-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Zephyr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
