--- a/series.conf
+++ b/series.conf
@@ -1395,6 +1395,7 @@
 	patches.kernel.org/6.17.8-007-fbcon-Set-fb_display-i-mode-to-NULL-when-the-m.patch
 	patches.kernel.org/6.17.8-008-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.kernel.org/6.17.8-009-ACPI-video-Fix-use-after-free-in-acpi_video_sw.patch
+	patches.kernel.org/6.17.8-010-ACPI-button-Call-input_free_device-on-failing-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
