--- a/series.conf
+++ b/series.conf
@@ -1820,6 +1820,7 @@
 	patches.kernel.org/6.17.8-432-media-adv7180-Add-missing-lock-in-suspend-call.patch
 	patches.kernel.org/6.17.8-433-media-adv7180-Do-not-write-format-to-device-in.patch
 	patches.kernel.org/6.17.8-434-media-adv7180-Only-validate-format-in-querystd.patch
+	patches.kernel.org/6.17.8-435-media-verisilicon-Explicitly-disable-selection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
