--- a/series.conf
+++ b/series.conf
@@ -12457,6 +12457,7 @@
 	patches.suse/ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark2.patch
 	patches.suse/ALSA-serial-generic-remove-shared-static-buffer.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
+	patches.suse/ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-jacks.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
 	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
