--- a/series.conf
+++ b/series.conf
@@ -12775,6 +12775,7 @@
 	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-i.patch
 	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
+	patches.suse/ACPI-property-Return-present-device-nodes-only-on-fw.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
