--- a/series.conf
+++ b/series.conf
@@ -12417,6 +12417,7 @@
 	patches.suse/ACPICA-dispatcher-Use-acpi_ds_clear_operands-in-acpi.patch
 	patches.suse/ACPICA-Update-dsmethod.c-to-get-rid-of-unused-variab.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
+	patches.suse/ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_ignore_dep.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
 	patches.suse/ACPI-property-Disregard-references-in-data-only-subn.patch
