--- a/series.conf
+++ b/series.conf
@@ -12470,6 +12470,7 @@
 	patches.suse/ASoC-stm32-sai-manage-context-in-set_sysclk-callback.patch
 	patches.suse/ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_sidecar-.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
+	patches.suse/ASoC-tlv320aic3x-Fix-class-D-initialization-for-tlv3.patch
 	patches.suse/drm-panthor-Fix-memory-leak-in-panthor_ioctl_group_c.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
