--- a/series.conf
+++ b/series.conf
@@ -12565,6 +12565,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-btusb-Check-for-unexpected-bytes-when-defr.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for-MT7922.patch
+	patches.suse/Bluetooth-bcsp-receive-data-only-if-registered.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
