--- a/series.conf
+++ b/series.conf
@@ -12509,6 +12509,7 @@
 	patches.suse/accel-habanalabs-gaudi2-read-preboot-status-after-re.patch
 	patches.suse/drm-amdgpu-Enable-MES-lr_compute_wa-by-default.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
+	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
 	patches.suse/media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
