--- a/series.conf
+++ b/series.conf
@@ -12452,6 +12452,7 @@
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
 	patches.suse/nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep-quirk.patch
+	patches.suse/ALSA-usb-audio-Add-validation-of-UAC2-UAC3-effect-un.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
