--- a/series.conf
+++ b/series.conf
@@ -12659,6 +12659,7 @@
 	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
 	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
+	patches.suse/crypto-qat-use-kcalloc-in-qat_uclo_map_objs_from_mof.patch
 	patches.suse/crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
