--- a/series.conf
+++ b/series.conf
@@ -12689,6 +12689,7 @@
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 	patches.suse/char-misc-Make-misc_register-reentry-for-miscdevice-.patch
+	patches.suse/char-misc-Does-not-request-module-for-miscdevice-wit.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/msft-hv-3336-uio_hv_generic-Let-userspace-take-care-of-interrupt-.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
