--- a/series.conf
+++ b/series.conf
@@ -34684,6 +34684,7 @@
 	patches.suse/mfd-da9063-Split-chip-variant-reading-in-two-bus-tra.patch
 	patches.suse/mfd-madera-Work-around-false-positive-Wininitialized.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.suse/power-supply-qcom_battmgr-add-OOI-chemistry.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
