--- a/series.conf
+++ b/series.conf
@@ -34670,6 +34670,7 @@
 	patches.suse/regulator-scmi-Use-int-type-to-store-negative-error-.patch
 	patches.suse/spi-bcm2835-Remove-redundant-semicolons.patch
 	patches.suse/spi-mtk-snfi-Remove-redundant-semicolons.patch
+	patches.suse/spi-loopback-test-Don-t-use-pK-through-printk.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
