--- a/series.conf
+++ b/series.conf
@@ -34686,6 +34686,7 @@
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/power-supply-qcom_battmgr-add-OOI-chemistry.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
+	patches.suse/power-supply-sbs-charger-Support-multiple-devices.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
