--- a/series.conf
+++ b/series.conf
@@ -34728,6 +34728,7 @@
 	patches.suse/soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 	patches.suse/soc-qcom-smem-Fix-endian-unaware-access-of-num_entri.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
+	patches.suse/soc-tegra-fuse-Add-Tegra114-nvmem-cells-and-fuse-loo.patch
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
