--- a/series.conf
+++ b/series.conf
@@ -34673,6 +34673,7 @@
 	patches.suse/spi-loopback-test-Don-t-use-pK-through-printk.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
+	patches.suse/spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
 	patches.suse/mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 	patches.suse/memstick-Add-timeout-to-prevent-indefinite-waiting.patch
