--- a/series.conf
+++ b/series.conf
@@ -34689,6 +34689,7 @@
 	patches.suse/power-supply-sbs-charger-Support-multiple-devices.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/power-supply-qcom_battmgr-handle-charging-state-chan.patch
+	patches.suse/pinctrl-single-fix-bias-pull-up-down-handling-in-pin.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.suse/pinctrl-check-the-return-value-of-pinmux_ops-get_fun.patch
