--- a/series.conf
+++ b/series.conf
@@ -34923,6 +34923,7 @@
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
+	patches.suse/thunderbolt-Use-is_pciehp-instead-of-is_hotplug_brid.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
 	patches.suse/char-misc-Make-misc_register-reentry-for-miscdevice-.patch
 	patches.suse/char-misc-Does-not-request-module-for-miscdevice-wit.patch
