--- a/series.conf
+++ b/series.conf
@@ -34726,6 +34726,7 @@
 	patches.suse/arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-iommu-map.patch
 	patches.suse/arm64-dts-apple-Add-ethernet0-alias-for-J375-template.patch
 	patches.suse/soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
+	patches.suse/soc-qcom-smem-Fix-endian-unaware-access-of-num_entri.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
