--- a/series.conf
+++ b/series.conf
@@ -34928,6 +34928,7 @@
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
+	patches.suse/usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ethernet.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/thunderbolt-Use-is_pciehp-instead-of-is_hotplug_brid.patch
