--- a/series.conf
+++ b/series.conf
@@ -34850,6 +34850,7 @@
 	patches.suse/wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi_m3_lo.patch
 	patches.suse/wifi-ath10k-avoid-unnecessary-wait-for-service-ready.patch
 	patches.suse/wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
+	patches.suse/wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-256.patch
 	patches.suse/wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-re-initi.patch
 	patches.suse/Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Link-AX9U.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
