--- a/series.conf
+++ b/series.conf
@@ -34843,6 +34843,7 @@
 	patches.suse/wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A7500.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
+	patches.suse/wifi-rtw88-sdio-use-indirect-IO-for-device-registers.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
