--- a/series.conf
+++ b/series.conf
@@ -56437,6 +56437,7 @@
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
+	patches.suse/drm-xe-Move-declarations-under-conditional-branch.patch
 	patches.suse/x86-CPU-AMD-Add-missing-terminator-for-zen5_rdseed_m.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-violation.patch
