--- a/series.conf
+++ b/series.conf
@@ -56475,6 +56475,7 @@
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
 	patches.suse/drm-amdgpu-disable-peer-to-peer-access-for-DCC-enabl.patch
 	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
+	patches.suse/drm-amdkfd-relax-checks-for-over-allocation-of-save-.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-re.patch
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
