--- a/series.conf
+++ b/series.conf
@@ -56299,6 +56299,7 @@
 	patches.suse/btrfs-fix-clearing-of-BTRFS_FS_RELOC_RUNNING-if-relo.patch
 	patches.suse/btrfs-do-not-assert-we-found-block-group-item-when-c.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
+	patches.suse/drm-amdgpu-remove-two-invalid-BUG_ON-s.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
