--- a/series.conf
+++ b/series.conf
@@ -12758,6 +12758,7 @@
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/net-phy-micrel-Introduce-lanphy_modify_page_reg.patch
+	patches.suse/net-phy-micrel-Replace-hardcoded-pages-with-defines.patch
 	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
 	patches.suse/inet-ping-check-sock_net-in-ping_get_port-and-ping_l.patch
 	patches.suse/smsc911x-add-second-read-of-EEPROM-mac-when-possible.patch
