--- a/series.conf
+++ b/series.conf
@@ -13201,6 +13201,7 @@
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/HID-quirks-avoid-Cooler-Master-MM712-dongle-wakeup-b.patch
 	patches.suse/HID-quirks-Add-ALWAYS_POLL-quirk-for-VRS-R295-steeri.patch
+	patches.suse/HID-nintendo-Wait-longer-for-initial-probe.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/HID-multitouch-fix-sticky-fingers.patch
