--- a/series.conf
+++ b/series.conf
@@ -13378,6 +13378,7 @@
 	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
 	patches.suse/erofs-avoid-infinite-loop-due-to-incomplete-zstd-compressed-data.patch
 	patches.suse/strparser-Fix-signed-unsigned-mismatch-bug.patch
+	patches.suse/net-phy-micrel-lan8814-fix-reset-of-the-QSGMII-inter.patch
 	patches.suse/Bluetooth-MGMT-cancel-mesh-send-timer-when-hdev-remo.patch
 	patches.suse/Bluetooth-btusb-reorder-cleanup-in-btusb_disconnect-.patch
 	patches.suse/Bluetooth-6lowpan-reset-link-local-header-on-ipv6-re.patch
