--- a/series.conf
+++ b/series.conf
@@ -13205,6 +13205,7 @@
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/HID-multitouch-fix-sticky-fingers.patch
+	patches.suse/HID-logitech-hidpp-Add-HIDPP_QUIRK_RESET_HI_RES_SCRO.patch
 	patches.suse/x86-resctrl-Fix-miscount-of-bandwidth-event-when-reactivat.patch
 	patches.suse/mm-mremap-correctly-account-old-mapping-after-MREMAP.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
