--- a/series.conf
+++ b/series.conf
@@ -13199,6 +13199,7 @@
 	patches.suse/nvme-auth-update-sc_c-in-host-response.patch
 	patches.suse/nvme-tcp-handle-tls-partially-sent-records-in-write_.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
+	patches.suse/HID-quirks-avoid-Cooler-Master-MM712-dongle-wakeup-b.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/HID-multitouch-fix-sticky-fingers.patch
