--- a/series.conf
+++ b/series.conf
@@ -13356,6 +13356,7 @@
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
 	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
+	patches.suse/drm-xe-Move-declarations-under-conditional-branch.patch
 	patches.suse/x86-amd_node-Fix-AMD-root-device-caching.patch
 	patches.suse/x86-microcode-AMD-Add-more-known-models-to-entry-sign-chec.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
