--- a/series.conf
+++ b/series.conf
@@ -13167,6 +13167,7 @@
 	patches.suse/btrfs-do-not-assert-we-found-block-group-item-when-c.patch
 	patches.suse/btrfs-fix-memory-leaks-when-rejecting-a-non-SINGLE-d.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
+	patches.suse/drm-amd-pm-Disable-MCLK-switching-on-SI-at-high-pixe.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
