--- a/series.conf
+++ b/series.conf
@@ -13409,6 +13409,7 @@
 	patches.suse/acpi-hmat-Fix-lockdep-warning-for-hmem_register_reso.patch
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
 	patches.suse/mmc-dw_mmc-rockchip-Fix-wrong-internal-phase-calcula.patch
+	patches.suse/drm-amdgpu-disable-peer-to-peer-access-for-DCC-enabl.patch
 	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 	patches.suse/pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connect.patch
