--- a/series.conf
+++ b/series.conf
@@ -13771,6 +13771,7 @@
 	# Wireless networking drivers
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
+	patches.suse/wifi-ath11k-Add-quirk-entries-for-Thinkpad-T14s-Gen3.patch
 
 	########################################################
 	# USB
