--- a/series.conf
+++ b/series.conf
@@ -56315,6 +56315,7 @@
 	patches.suse/drm-sched-Fix-potential-double-free-in-drm_sched_job.patch
 	patches.suse/drm-xe-guc-Check-GuC-running-state-before-deregister.patch
 	patches.suse/ALSA-hda-cs35l41-Fix-NULL-pointer-dereference-in-cs3.patch
+	patches.suse/ALSA-hda-Fix-missing-pointer-check-in-hda_component_.patch
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
 	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
