--- a/series.conf
+++ b/series.conf
@@ -8507,6 +8507,7 @@
 	patches.suse/perf-core-Fix-child_total_time_enabled-accounting-bug-at-t.patch
 	patches.suse/tools-power-turbostat-Clustered-Uncore-MHz-counters-.patch
 	patches.suse/tools-power-turbostat-Allow-Zero-return-value-for-some-RAPL-registers.patch
+	patches.suse/tools-power-turbostat-Fix-names-matching.patch
 	patches.suse/tools-power-turbostat-Increase-CPU_SUBSET_MAXCPUS-to-8192.patch
 	patches.suse/tools-power-turbostat-report-CoreThr-per-measurement-interval.patch
 	patches.suse/tools-power-turbostat-Restore-GFX-sysfs-fflush-call.patch
