--- a/series.conf
+++ b/series.conf
@@ -8513,6 +8513,7 @@
 	patches.suse/tools-power-turbostat-report-CoreThr-per-measurement-interval.patch
 	patches.suse/tools-power-turbostat-Document-GNR-UncMHz-domain-convention.patch
 	patches.suse/tools-power-turbostat-Restore-GFX-sysfs-fflush-call.patch
+	patches.suse/tools-power-turbostat-re-factor-sysfs-code.patch
 	patches.suse/cgroup-cpuset-Fix-incorrect-isolated_cpus-update-in-update_parent_effective_cpumask.patch
 	patches.suse/cgroup-cpuset-Fix-error-handling-in-remote_partition_disable.patch
 	patches.suse/cgroup-cpuset-Remove-remote_partition_check-make-update_cp.patch
