--- a/series.conf
+++ b/series.conf
@@ -10446,6 +10446,7 @@
 	patches.suse/do_change_type-refuse-to-operate-on-unmounted-not-ou.patch
 	patches.suse/PCI-MSI-Size-device-MSI-domain-with-the-maximum-numb.patch
 	patches.suse/x86-iopl-Cure-TIF_IO_BITMAP-inconsistencies.patch
+	patches.suse/tools-power-turbostat.8-fix-typo-idle_pct-should-be-pct_idle.patch
 	patches.suse/tools-power-turbostat-Fix-AMD-package-energy-reporting.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
