--- a/series.conf
+++ b/series.conf
@@ -10452,6 +10452,7 @@
 	patches.suse/tools-power-turbostat-Fix-RAPL_GFX_ALL-typo.patch
 	patches.suse/tools-power-turbostat-Fix-AMD-package-energy-reporting.patch
 	patches.suse/tools-power-turbostat-Always-check-rapl_joules-flag.patch
+	patches.suse/tools-power-turbostat-Quit-early-for-unsupported-RAPL-counters.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/tools-resolve_btfids-Fix-build-when-cross-compiling-.patch
