--- a/series.conf
+++ b/series.conf
@@ -10459,6 +10459,7 @@
 	patches.suse/tools-power-turbostat-Introduce-add_msr_counter.patch
 	patches.suse/tools-power-turbostat-Clean-up-add-perf-msr-counter-logic.patch
 	patches.suse/tools-power-turbostat-Allow-probing-RAPL-with-platform_features-rapl_msrs-cleared.patch
+	patches.suse/tools-power-turbostat-Avoid-probing-the-same-perf-counters.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/tools-resolve_btfids-Fix-build-when-cross-compiling-.patch
