--- a/series.conf
+++ b/series.conf
@@ -10461,6 +10461,7 @@
 	patches.suse/tools-power-turbostat-Allow-probing-RAPL-with-platform_features-rapl_msrs-cleared.patch
 	patches.suse/tools-power-turbostat-Avoid-probing-the-same-perf-counters.patch
 	patches.suse/tools-power-turbostat-Dump-RAPL-sysfs-info.patch
+	patches.suse/tools-power-turbostat-Add-initial-support-for-DMR.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/tools-resolve_btfids-Fix-build-when-cross-compiling-.patch
