--- a/series.conf
+++ b/series.conf
@@ -10463,6 +10463,7 @@
 	patches.suse/tools-power-turbostat-Dump-RAPL-sysfs-info.patch
 	patches.suse/tools-power-turbostat-Add-initial-support-for-DMR.patch
 	patches.suse/tools-power-turbostat-Add-initial-support-for-BartlettLake.patch
+	patches.suse/tools-power-turbostat-version-2025.06.08.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/tools-resolve_btfids-Fix-build-when-cross-compiling-.patch
